--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <title>Geolocation</title>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: #000;
+        font-family: sans-serif;
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      .mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right {
+        display: none !important;
+      }
+    </style>
     <script src="p5.min.js"></script>
-    <!-- <script src="addons/p5.sound.min.js"></script> -->
+    <script src="addons\p5.sound.min.js"></script>
+    <script src="addons\p5.geolocation.js"></script>
+    <script src="https://unpkg.com/mappa-mundi/dist/mappa.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
