--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <title>Geolocation</title>
+    <title>The Dark Side of Italy</title>
     <style>
+      @font-face {
+        font-family: "din";
+        src: url(din.ttf);
+      }
       body {
         padding: 0;
         margin: 0;
@@ -17,13 +21,28 @@
       .mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right {
         display: none !important;
       }
+      button {
+        cursor: pointer;
+        z-index: 2;
+        position: fixed;
+        left: 3vw;
+        width: 100px; /*width: 15vw;*/
+        padding: 6px 0 4px 0; /*padding: .7vw 0 .5vw 0;*/
+        font-family: "din";
+        font-size: 20px; /*font-size: 3vw;*/
+        color: #fff;
+        background-color: #000;
+        outline: none;
+        border: none;
+      }
     </style>
-    <script src="p5.min.js"></script>
-    <script src="addons\p5.sound.min.js"></script>
-    <script src="addons\p5.geolocation.js"></script>
-    <script src="https://unpkg.com/mappa-mundi/dist/mappa.js"></script>
-    <script src="sketch.js"></script>
+    <script src="p5.min.js" type="text/javascript"></script>
+    <script src="addons/p5.geolocation.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
   </head>
   <body>
+    <button style="top:3vw" onclick="fly(1)">FLY</button>
+    <button style="top:calc(3vw + 50px)" onclick="fly(0)">BACK</button>
   </body>
 </html>
